doc/src/content/docs/0.5.x/api/command/lowlevel/change-pattern-bank.mdx
---
title: ChangePatternBank
description: Pattern バンクの切り替え
sidebar:
  order: 14
slug: 0.5.x/api/command/lowlevel/change-pattern-bank
---

import CodeTabs from "@components/CodeTabs.astro";

`ChangePatternBank` は, 再生対象の Pattern バンクを切り替える低レベルコマンド.

## API

<CodeTabs rust={"ChangePatternBank {\n    bank,\n    transition_mode,\n};"} python={"ChangePatternBank(\n    bank=bank,\n    transition_mode=transition_mode,\n)"} csharp={"new ChangePatternBank(\n    bank: bank,\n    transitionMode: transitionMode\n);"} />

| フィールド        | 型               | 説明                     |
| ----------------- | ---------------- | ------------------------ |
| `bank`            | `PatternBank`    | 切り替え先バンク         |
| `transition_mode` | `TransitionMode` | 切り替え時の挙動         |

## TransitionMode

|            |              |
| -------------------- | --------------------------        |
| `Immediate`          | 即時                              |
| `SyncIdx`            | 次に再生インデックスが0になった時 |
| `SysTime(DcSysTime, margin)` | 指定した DC システム時刻 (`margin` は後述. 省略可) |
| `Gpio(GpioIn)`       | 指定 GPIO 入力ピンのトリガ        |
| `Ext`                | 拡張モード (バンク内の再生が終わると次のバンクに自動で切り替え) |
| `Later`              | 遷移しない (バンクへの書き込みだけを行う) |

`SysTime` は指定時刻が近すぎると FPGA が遷移を取りこぼす可能性があるため, 「現在時刻 + マージン」より前の指定を `MISS_TRANSITION_TIME` エラーで拒否する.
マージンはデフォルトで 10 ms である.

`Later` は「バンクへ書き込むだけで遷移しない」ことを表す.
`Modulation` / `FociStm` / `PatternStm` の `transition_mode` に指定すると, 末尾のバンク切り替えを送らず書き込みと設定だけを行う.
遷移コマンドである `ChangeModulationBank` / `ChangePatternBank` 自身に指定した場合はビルド時エラーになる.
また `Later` は遷移しないため, `LoopBehavior` との組み合わせ制約の対象外である.

`Gpio(GpioIn)` の詳細は [GPIO ピン](/autd3-sdk/0.5.x/hardware/gpio/) を参照.

同一バンクへの切り替えでは, `TransitionMode` や `LoopBehavior` の設定は機能しない.
バンク運用の詳細は [バンクの切り替え チュートリアル](/autd3-sdk/0.5.x/getting-started/tutorial/bank/) を参照.

## Example

`ChangePatternBank` は `WritePatternBuffer` + `ConfigPattern` でバンクを準備した後に送り, 再生対象を切り替える.

<CodeTabs rust={"use core::num::NonZeroU16;\n\nuse autd3_rs::commands::{ChangePatternBank, ConfigPattern, WritePatternBuffer};\nuse autd3_rs::geometry::{Autd3, Geometry, offset};\nuse autd3_rs::units::{m, mm, s};\nuse autd3_rs::value::{LoopBehavior, PatternBank, SamplingConfig, TransitionMode};\nuse autd3_rs::{Client, ClientConfig};\nuse autd3_rs_link_nop::Nop;\nuse autd3_rs_pattern::{FocusOption, focus, wavelength};\n\nlet geometry = Geometry::new(vec![Autd3::default()]);\nlet client = Client::open(&geometry, Nop, ClientConfig::default()).await?;\n\nlet mut emissions = geometry.pattern_buffer();\nfocus(\n    &geometry,\n    geometry.center() + offset(0.0 * mm, 0.0 * mm, 150.0 * mm),\n    wavelength(340.0 * m / s),\n    &FocusOption::default(),\n    &mut emissions,\n);\n\nlet bank = PatternBank::B0;\n\nlet mut builder = client.datagram_builder();\nbuilder.push(WritePatternBuffer {\n    bank,\n    index: 0,\n    emissions: &emissions,\n});\nbuilder.push(ConfigPattern {\n    bank,\n    config: SamplingConfig::new(NonZeroU16::MAX),\n    size: 1,\n    loop_behavior: LoopBehavior::Infinite,\n});\nbuilder.push(ChangePatternBank {\n    bank,\n    transition_mode: TransitionMode::Immediate,\n});\nlet frames = builder.build()?;\nfor frame in &frames {\n    client.send_checked(frame).await?;\n}\n\nclient.close().await?;"} python={"import asyncio\n\nimport numpy as np\n\nfrom autd3 import Client, ClientConfig\nfrom autd3.commands import ChangePatternBank, ConfigPattern, WritePatternBuffer\nfrom autd3.geometry import Autd3, Geometry\nfrom autd3.units import m, s\nfrom autd3.value import LoopBehavior, PatternBank, SamplingConfig, TransitionMode\nfrom autd3_link_nop import Nop\nfrom autd3_pattern import FocusOption, focus, wavelength\n\n\nasync def main() -> None:\n    geometry = Geometry([Autd3([0.0, 0.0, 0.0], [1.0, 0.0, 0.0, 0.0])])\n    client = await Client.open(geometry, Nop(), ClientConfig())\n\n    emissions = geometry.pattern_buffer()\n    focus(\n        geometry,\n        geometry.center() + np.array([0.0, 0.0, 150.0]),\n        wavelength(340 * m / s),\n        FocusOption(),\n        emissions,\n    )\n\n    bank = PatternBank.B0\n\n    builder = client.datagram_builder()\n    builder.push(\n        WritePatternBuffer(\n            bank=bank,\n            index=0,\n            emissions=emissions,\n        )\n    )\n    builder.push(\n        ConfigPattern(\n            bank=bank,\n            config=SamplingConfig(0xFFFF),\n            size=1,\n            loop_behavior=LoopBehavior.Infinite,\n        )\n    )\n    builder.push(\n        ChangePatternBank(\n            bank=bank,\n            transition_mode=TransitionMode.Immediate,\n        )\n    )\n    frames = builder.build()\n    for frame in frames:\n        await client.send_checked(frame)\n\n    await client.close()\n\n\nasyncio.run(main())"} csharp={"using System.Numerics;\nusing System.Threading.Tasks;\nusing AUTD3;\nusing AUTD3.Link;\nusing Nop = AUTD3.Link.Nop;\nusing static AUTD3.Units;\n\nvar geometry = new Geometry(new[] { new Autd3(Vector3.Zero) });\nvar client = await Client.OpenAsync(geometry, new Nop(), new ClientConfig());\n\nvar emissions = geometry.PatternBuffer();\nPattern.Focus(\n    geometry,\n    geometry.Center + new Vector3(0.0f, 0.0f, 150.0f),\n    Pattern.Wavelength(340.0f * m / s),\n    new FocusOption(),\n    emissions\n);\n\nvar bank = PatternBank.B0;\n\nvar builder = client.DatagramBuilder();\nbuilder.Push(new WritePatternBuffer(\n    bank: bank,\n    index: 0,\n    emissions: emissions\n));\nbuilder.Push(new ConfigPattern(\n    bank: bank,\n    config: new SamplingConfig(ushort.MaxValue),\n    size: 1,\n    loopBehavior: LoopBehavior.Infinite\n));\nbuilder.Push(new ChangePatternBank(\n    bank: bank,\n    transitionMode: TransitionMode.Immediate\n));\nvar frames = builder.Build();\nforeach (var frame in frames)\n{\n    await client.SendCheckedAsync(frame);\n}\n\nawait client.CloseAsync();"} />
